src/app/callout/[calloutSetId]/CalloutSetPage.module.css
.mainContent {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    flex-grow: 1;
}

.title {
    font-size: 3rem;
    text-align: center;
    margin-bottom: 0.2rem;
    font-weight: 800;
}

.activityButtonList {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.activityMobileSelect {
    display: none;
    font-size: 1.3rem;
    padding: 0.5rem;
    margin: 0 auto;
    width: 80%;
    border-radius: 1px;
    background-color: black;
    color: var(--text-primary);
    transition: background-color 0.3s ease;
}

.activityMobileSelect option {
    color: var(--text-primary);
}

.activityMobileSelect::after {
    content: "";
    position: absolute;
    top: calc(50% - 3px);
    right: 10px;
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid var(--text-primary);
    pointer-events: none;
}

.activityMobileSelect:hover {
    background-color: #181818;
}

.activitySelectButton {
    font-size: 1.3rem;
    padding: 0.5rem;
    margin: 0.2rem;
    font-weight: 900;
    border-radius: 8px;
    background-color: black;
    color: var(--text-primary);
    white-space: nowrap;
    transition: background-color 0.3s ease;
}

.activitySelectButton:hover:not(.selectedActivity) {
    background-color: #181818;
}

.selectedActivity {
    background-color: white;
    color: black;
}

.shareButton {
    font-size: 1.2rem;
    font-weight: 700;
    display: block;
    margin: 1rem auto;
    padding: 0.8rem 1rem;
    border-radius: 5px;
    color: var(--text-primary);
    background-color: #255CF5;
    white-space: nowrap;
    transition: background-color 0.3s ease;
}

.shareButton:hover {
    background-color: #1A3FCC;
}

.symbolsDisplay {
    position: relative;
    width: 55%;
    padding: 2rem 0.5rem;
    margin: 1rem auto;
}

.symbolDisplayBackground {
    z-index: -1;
    object-fit: cover;
    border-radius: 16px;
}

.actionButtonList {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.actionButton {
    margin: 0 0.3rem;
    margin-bottom: 1rem;
    padding: 0.7rem 0.9rem;
    border-radius: 27px;
    background-color: rgba(0, 0, 0, 0.19);
    border: 1px solid #F8F3F3;
    color: var(--text-primary);
    transition: background-color 0.3s ease;
    display: flex;
    justify-content: center;
    align-items: center;
}
.actionButton:hover {
    background-color: rgba(0, 0, 0, 0.62);
}

.actionButton * {
    color: var(--text-primary);
}

.actionButton svg {
    margin-right: 0.5rem;
}

.actionButton span {
    font-size: 1.2rem;
    font-weight: 800;
}

.symbolList {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.symbol {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
    margin: 5px;
    border-radius: 10px;
    transition: background-color 0.3s ease;
}

.symbolEditMode {
    background-color: rgba(0, 0, 0, 0.3);
}

.symbolImageContainer {
    position: relative;
    background-color: transparent;
    width: 6rem;
    height: 6rem;
    margin: 0.5rem 1rem;
}

.symbolName {
    text-align: center;
    width: 140px;
    height: 30px;
    border-radius: 4px;
    background-color: rgba(0, 0, 0, 0.3);
    font-size: 1.2rem;
    font-weight: 700;
    transition: color 0.3s ease;
}

@media screen and (max-width: 1500px) {
    .symbolsDisplay {
        width: 80%;
    }
}

@media screen and (max-width: 900px) {
    .symbolsDisplay {
        width: 95%;
    }
}

@media screen and (max-width: 500px) {
    .activityButtonList {
        display: none;
    }

    .activityMobileSelect {
        display: block;
    }
}

@media screen and (max-width: 750px) {
    .symbolImageContainer {
        width: 5rem;
        height: 5rem;
    }
}

@media screen and (max-width: 570px) {
    /* .symbolImageContainer {
        width: 4rem;
        height: 4rem;
    } */
}

